--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ts-morph": "^17.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
